--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_APP_SERVER=https://chatapp-backend-dcb3e47f1f84.herokuapp.com
+VITE_APP_SERVER=https://mobin-chatapp-backend-d2bf38a51a92.herokuapp.com/
