--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
-  "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }],
-  "trailingSlash": false
-}
+    "routes": [{ "src": "/.*", "dest": "/$1", "status": 200 }],
+    "cleanUrls": true
+  }
+  
