--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,1 @@
-{
-    "routes": [{ "src": "/.*", "dest": "/$1", "status": 200 }],
-    "cleanUrls": true
-  }
-  
+{ "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }] }
